--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body {
+    min-height: 100%;
+}
+
 #header {
     width: 100%;
     height: 100px;
@@ -15,16 +19,33 @@
 }
 
 #searchArea {
+    width: 350px;
 }
 
 .custom-container {
     margin-left: 0px;
-
 }
 
 #currentWeather {
-    margin-top: -150px;
-    margin-left: 400px;
+    font-size: 125%;
     border: 2px solid black;
-    padding-bottom: 50px;
+    padding-bottom: 10px;
+}
+
+#weatherArea {
+    margin-top: -60px;
+    margin-left: 400px;
+}
+
+.fiveDay {
+    margin-left: 400px;
+}
+
+.li {
+    background-color: gray;
+    border-radius: 4px;
+    text-align: center;
+    margin-top: 10px;
+    padding: 2px;
+    font-size: 110%;
 }
