--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,19 +3,22 @@ body {
 }
 
 #header {
+    padding-top: 10px;
+    font-size: 250%;
     width: 100%;
     height: 100px;
     text-align: center;
-    background-color: aqua;
+    background-color: rgb(7, 71, 190);
+    color: antiquewhite;
 }
 
 #searchBtn {
     margin-top: 20px;
-    width: 350px;
+    width: 400px;
 }
 
 #cityInput {
-    width: 350px;
+    width: 400px;
 }
 
 #searchArea {
@@ -27,6 +30,7 @@ body {
 }
 
 #currentWeather {
+    height: 400px;
     font-size: 125%;
     border: 2px solid black;
     padding-bottom: 10px;
@@ -38,7 +42,6 @@ body {
 }
 
 .fiveDay {
-    margin-left: 400px;
 }
 
 .li {
@@ -48,4 +51,8 @@ body {
     margin-top: 10px;
     padding: 2px;
     font-size: 110%;
+}
+
+ul {
+    padding-left: 0;
 }
