--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,9 +41,6 @@ body {
     margin-left: 400px;
 }
 
-.fiveDay {
-}
-
 .li {
     background-color: gray;
     border-radius: 4px;
@@ -55,4 +52,24 @@ body {
 
 ul {
     padding-left: 0;
+}
+
+.greenback {
+    background-color: green;
+}
+
+.yellowback {
+    background-color: yellow;
+}
+
+.orangeback {
+    background-color: orange;
+}
+
+.redback {
+    background-color: red;
+}
+
+.purpleback {
+    background-color: purple;
 }
