--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,96 +1,108 @@
 body {
-    min-height: 100%;
+  min-height: 100vh;
+  max-height: 100%;
+  background-size: cover;
+  background-image: url("https://lh3.googleusercontent.com/CnHg3skxcIhFKh5oE_ZV61x-a-tqWKIWC04a4hWkmQymuBRGlp3Kgnr_d3bEj-jgvPZAM1kh4nkpALUr0bDaUJdzPQ=w640-h400-e365-rj-sc0x00ffffff");
 }
 
 #header {
-    padding-top: 10px;
-    font-size: 250%;
-    width: 100%;
-    height: 100px;
-    text-align: center;
-    background-color: rgb(7, 71, 190);
-    color: antiquewhite;
+  padding-top: 10px;
+  font-size: 250%;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  background-color: rgb(7, 71, 190);
+  color: antiquewhite;
 }
 
 #searchBtn {
-    margin-top: 20px;
-    width: 400px;
+  margin-top: 20px;
+  width: 100%;
 }
 
 #cityInput {
-    width: 400px;
+  width: 100%;
 }
 
 #searchArea {
-    width: 350px;
+  width: 350px;
 }
 
 .custom-container {
-    margin-left: 0px;
+  margin-left: 0px;
 }
 
 #currentWeather {
-    height: 400px;
-    font-size: 125%;
-    border: 2px solid black;
-    padding-bottom: 10px;
+  height: 400px;
+  font-size: 125%;
+  border: 2px solid black;
+  padding-bottom: 10px;
 }
 
 #weatherArea {
-    margin-top: -60px;
-    margin-left: 400px;
+  margin-top: -60px;
+  margin-left: 400px;
+}
+
+#weather {
+  display: none;
 }
 
 .li {
-    background-color: gray;
-    border-radius: 4px;
-    text-align: center;
-    margin-top: 10px;
-    padding: 2px;
-    font-size: 110%;
+  background-color: gray;
+  border-radius: 4px;
+  text-align: center;
+  margin-top: 10px;
+  padding: 2px;
+  font-size: 110%;
 }
 
 ul {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 .greenback {
-    background-color: green;
-    width: 200px;
-    padding: 4px;
-    border-radius: 4px;
+  background-color: green;
+  width: 200px;
+  padding: 4px;
+  border-radius: 4px;
 }
 
 .yellowback {
-    background-color: yellow;
-    width: 200px;
-    padding: 4px;
-    border-radius: 4px;
+  background-color: yellow;
+  width: 200px;
+  padding: 4px;
+  border-radius: 4px;
 }
 
 .orangeback {
-    background-color: orange;
-    width: 200px;
-    padding: 4px;
-    border-radius: 4px;
+  background-color: orange;
+  width: 200px;
+  padding: 4px;
+  border-radius: 4px;
 }
 
 .redback {
-    background-color: red;
-    width: 200px;
-    padding: 4px;
-    border-radius: 4px;
+  background-color: red;
+  width: 200px;
+  padding: 4px;
+  border-radius: 4px;
 }
 
 .purpleback {
-    background-color: purple;
-    width: 200px;
-    padding: 4px;
-    border-radius: 4px;
+  background-color: purple;
+  width: 200px;
+  padding: 4px;
+  border-radius: 4px;
 }
 
 .custom-card {
-    background-color: rgb(26, 25, 78);
-    color: white;
-    font-size: 125%;
+  background-color: rgb(26, 25, 78);
+  color: white;
+  font-size: 125%;
+  flex-shrink: 3;
+  width: 15rem;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  height: 20rem;
 }
