--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,93 +5,55 @@ body {
   background-image: url("https://lh3.googleusercontent.com/CnHg3skxcIhFKh5oE_ZV61x-a-tqWKIWC04a4hWkmQymuBRGlp3Kgnr_d3bEj-jgvPZAM1kh4nkpALUr0bDaUJdzPQ=w640-h400-e365-rj-sc0x00ffffff");
 }
 
-#header {
+header {
   padding-top: 10px;
   font-size: 250%;
   width: 100%;
-  height: 100px;
+  height: 6rem;
   text-align: center;
   background-color: rgb(7, 71, 190);
   color: antiquewhite;
 }
 
-#searchBtn {
-  margin-top: 20px;
-  width: 100%;
-}
-
-#cityInput {
-  width: 100%;
-}
-
-#searchArea {
-  width: 350px;
-}
-
-.custom-container {
-  margin-left: 0px;
-}
-
-#currentWeather {
-  height: 400px;
-  font-size: 125%;
-  border: 2px solid black;
-  padding-bottom: 10px;
-}
-
-#weatherArea {
-  margin-top: -60px;
-  margin-left: 400px;
-}
-
-#weather {
-  display: none;
-}
-
-.li {
-  background-color: gray;
-  border-radius: 4px;
+ul {
+  padding-left: 0;
   text-align: center;
+}
+
+li {
+  background-color: rgb(158, 158, 158);
+  border-radius: 4px;
   margin-top: 10px;
   padding: 2px;
   font-size: 110%;
 }
 
-ul {
-  padding-left: 0;
-}
-
 .greenback {
   background-color: green;
-  width: 200px;
   padding: 4px;
   border-radius: 4px;
 }
 
 .yellowback {
   background-color: yellow;
-  width: 200px;
   padding: 4px;
   border-radius: 4px;
 }
 
 .orangeback {
   background-color: orange;
-  width: 200px;
   padding: 4px;
   border-radius: 4px;
 }
 
 .redback {
   background-color: red;
-  width: 200px;
   padding: 4px;
   border-radius: 4px;
 }
 
 .purpleback {
   background-color: purple;
-  width: 200px;
   padding: 4px;
   border-radius: 4px;
 }
@@ -101,8 +63,32 @@ ul {
   color: white;
   font-size: 125%;
   flex-shrink: 3;
-  width: 15rem;
+  width: 14rem;
   margin-left: 1rem;
   margin-bottom: 1rem;
+  height: 15rem;
+}
+
+#cityInput {
+  width: 100%;
+  color: black;
+}
+
+#searchBtn {
+  margin-top: 1rem;
+  width: 100%;
+}
+
+#weather {
+  display: none;
+  margin-top: 1rem;
+}
+
+#currentWeather {
   height: 20rem;
+  font-size: 125%;
+  border: 0.25rem solid black;
+  padding-bottom: 1rem;
+  width: 90%;
+  background-color: rgba(255, 255, 255, 0.5);
 }
